--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "description": "",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.0",
-    "cloudinary": "^2.3.0",
+    "cloudinary": "^1.27.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
@@ -25,7 +25,7 @@
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.4.4",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
